# cg-course

./: CMakeLists.txt  README.md
.github/workflows/: build.yml  release.yml
include/: main.hpp  matrix.hpp  obj.h  obj.hpp  prism.h  pryamid.h  stb_image.h
src/: main.c  main.cpp
